// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DumbLoginForm /> renders a disabled submit button when invalid 1`] = `
<form
  onSubmit={[Function]}
>
  <Alert
    message="Some error"
    type="error"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Email"
    name="email"
    validate={[Function]}
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Wachtwoord"
    name="password"
    type="password"
    validate={[Function]}
  />
  <RaisedButton
    backgroundColor="#27AE60"
    disabled={false}
    fullWidth={true}
    label="Inloggen"
    labelColor="#FFFFFF"
    labelPosition="after"
    primary={false}
    secondary={false}
    type="submit"
  />
</form>
`;

exports[`<DumbLoginForm /> renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <Field
    component={[Function]}
    fullWidth={true}
    label="Email"
    name="email"
    validate={[Function]}
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Wachtwoord"
    name="password"
    type="password"
    validate={[Function]}
  />
  <RaisedButton
    backgroundColor="#27AE60"
    disabled={true}
    fullWidth={true}
    label="Inloggen"
    labelColor="#FFFFFF"
    labelPosition="after"
    primary={false}
    secondary={false}
    type="submit"
  />
</form>
`;

exports[`<DumbLoginForm /> renders errors 1`] = `
<form
  onSubmit={[Function]}
>
  <Alert
    message="Some error"
    type="error"
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Email"
    name="email"
    validate={[Function]}
  />
  <Field
    component={[Function]}
    fullWidth={true}
    label="Wachtwoord"
    name="password"
    type="password"
    validate={[Function]}
  />
  <RaisedButton
    backgroundColor="#27AE60"
    disabled={true}
    fullWidth={true}
    label="Inloggen"
    labelColor="#FFFFFF"
    labelPosition="after"
    primary={false}
    secondary={false}
    type="submit"
  />
</form>
`;
